--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -110,6 +110,7 @@
   margin-top: 4px;
   margin-left: 32px;
   width: 416px;
+  color: gray;
 }
 
 .header-icon-1-image {
@@ -175,13 +176,15 @@
   margin-top: 10px;
   margin-left: 32px;
   font-size: 8px;
+  color: gray;
 }
 
 .header-search-label-type-2 {
   position: absolute;
-  margin-top: 4px;
+  margin-top: 6px;
   margin-left: 16px;
-  font-size: 14px;
+  font-size: 10px;
+  color: gray;
 }
 
 .header-search-label-icon {
@@ -199,6 +202,7 @@
   width: 120px;
   align-items: center;
   padding-left: 4px;
+  color: gray;
 }
 
 .header-icon-name {
@@ -354,8 +358,13 @@
   font-size: 10px;
 }
 
+.right-container-image-details path {
+  fill: lightgray;
+}
+
 .right-container-image-details-contents {
   margin-left: 8px;
+  color: gray;
 }
 
 .right-leave-reasons {
@@ -366,9 +375,11 @@
   flex-grow: 1;
   margin-bottom: 0;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   font-weight: 700;
+  padding-left: 16px;
+  font-size: 12px;
 }
 
 .right-leave-details {
