Fixed the small styles related issues

--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -44,6 +44,7 @@
 .intro-container-left-details-menu-items-image {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .intro-container-left-details-menu-items-text p {
